Fixed alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,5 @@
 body{
-        background-color: #303030;
+    background-color: #303030;
 }
 
 h1{
@@ -8,6 +8,7 @@ h1{
     top: 5%;
     left: 50%;
     text-align: center;
+    transform: translateX(-50%);
 }
 h2{
     color: white;
@@ -15,6 +16,7 @@ h2{
     top: 20%;
     left: 50%;
     text-align: center;
+    transform: translateX(-50%);
 }
 button{
     color:  black;
@@ -31,6 +33,7 @@ button{
     border: none;
     border-radius: 8px;
     box-shadow: 0px 6px #b8ac14;
+    transform: translateX(-50%);
 }
 button:hover{
     background-color: #ffed00;
@@ -38,5 +41,5 @@ button:hover{
 button:active{
     background-color: #ffff00;
     box-shadow: 0px 2px #b8ac14;
-    transform: translateY(4px);
+    transform: translateY(4px) translateX(-50%);
 }
